improved and fixed the close issue